# toy-renderer

./: .gitignore  Cargo.toml  README.md
src/: buffer.rs  color.rs  image.rs  lib.rs  renderer.rs  scene.rs  shape.rs
