[package]
name = "simple-rpt"
version = "0.1.0"
edition = "2024"

[dependencies]
glam = "0.30.9"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.10"
indicatif = "0.17"
rand = "0.9.2"
rayon = "1.11.0"
image = { version = "0.25" }
palette = "0.7.6"
rand_distr = "0.5.1"

[lints.clippy]
all = "warn"
perf = "warn"
style = "warn"
complexity = "warn"
